# llama.cpp

./: .gitignore
common/: arg.cpp  common.h
ggml/: CMakeLists.txt
ggml/include/: ggml-cuda.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-cuda/: CMakeLists.txt  ggml-cuda.cu
ggml/src/ggml-tilelang/: CMakeLists.txt  KERNEL-DEVELOPMENT.md  WORKFLOW.md  ggml-tilelang.cpp  ggml-tilelang.h  tilelang-cuda-injection.cu  tilelang-cuda-injection.h  tilelang-cuda-util.cu  tilelang-kernels-cuda-stub.cu  tilelang-kernels.h  tilelang-q8-0-gemv-cuda-stub.cu  tilelang-q8-0-microbench.cu
ggml/src/ggml-tilelang/kernels/: common.py  gen_kernels.py  registry.py
ggml/src/ggml-tilelang/kernels/ops/: w8a8_gemm.py  w8a8_gemv.py
ggml/src/ggml-tilelang/tools/: pack_w8a8_sidecar.py
ggml/src/ggml-tilelang/tools/smoothquant/: calibrate_smoothquant.py  compare_logits.py  convert_qwen_w8a8.py  embed_w8a8_sidecar.py  pack_w8a8_sidecar.py  run_qwen35_ffn_replacement_e2e.py
src/: llama-model-loader.cpp  llama.cpp
src/models/: qwen35.cpp
tools/mtmd/: CMakeLists.txt  clip.cpp  vl-embedding.cpp
tools/mtmd/models/: qwen3vl.cpp
